--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -124,7 +124,16 @@ h3 {
     text-align: center;
     line-height: 50px;
     background-color: #FFEBDC;
-    font-size: 24px;
+    font-size: 20px;
     margin: 0.5rem;
+}
+.vert {
+    background-color: greenyellow;
+}
+.jaune {
+    background-color: yellow;
+}
+.gris {
+    background-color: darkgray;
 }
 
