--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,22 @@
 body {
   background-color: #FFEBDC;
 }
-
 .motsDeTete {
+  background-color: #FFDAC3;
+  width: 90rem;
+  max-width: 900px;
+  display: none;
+  flex-direction: column;
+  margin: auto;
+  border-radius: 50% 50% 0 0;
+  aspect-ratio: 1/1;
+}
+img {
+  width: 116px;
+  height: 152px;
+  margin: 0 auto;
+}
+.menu {
   background-color: #FFDAC3;
   width: 90rem;
   max-width: 900px;
@@ -11,6 +25,18 @@ body {
   margin: auto;
   border-radius: 50% 50% 0 0;
   aspect-ratio: 1/1;
+  &__difficulte {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 5rem;
+  }
+  &__interface {
+    display: flex;
+    flex-direction: column;
+    padding-top: 3rem;
+    gap: 16px;
+  }
 }
 p {
   margin: 0;
@@ -100,7 +126,7 @@ h1 {
   color: white;
 }
 
-#btnRegle, #btnDifficulte {
+#btnRegle, #btnDifficulte{
   background-color: transparent;
   color: #9D4B1E;
   border-radius: 10px;
@@ -114,7 +140,33 @@ h1 {
   background-color: #B24509;
   color: white;
 }
-
+#menuRegle {
+  width: 453px;
+  height: 57px;
+  margin: 0 auto;
+  background-color: transparent;
+  color: #9D4B1E;
+  border: 3px solid #9D4B1E;
+  padding: 10px 30px;
+  border-radius: 10px;
+}
+#menuRegle:hover {
+  background-color: #9D4B1E;
+  color: #FFDAC3;
+}
+#menuCommencer {
+  width: 453px;
+  height: 57px;
+  margin: 0 auto;
+  background-color: #9D4B1E;
+  color: #FFEBDC;
+  border: 3px solid #9D4B1E;
+  padding: 10px 30px;
+  border-radius: 10px;
+}
+#menuCommencer:hover {
+  background-color: #6D0000;
+}
 #btnJouer:hover {
   background-color: #6D0000;
   color: white;
@@ -188,5 +240,6 @@ h3 {
   background-color: #E5D4C8 !important;
   color: black !important;
 }
+
 
 
