--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,11 @@ h1 {
   gap: 2rem;
 }
 .interface__label {
-  background-color: #406D65;
+  background-color: #FFDAC2;
   border-radius: 10px;
+  border: 3px solid #406D65;
   padding: 10px 40px;
-  color: #FFDAC2;
+  color: black;
 }
 .interface__mot {
   display: flex;
@@ -188,6 +189,11 @@ h1 {
 
 input[type=radio] {
   display: none;
+}
+
+input[type=radio]:checked + label {
+  background-color: #406D65;
+  color: white;
 }
 
 h3 {
