--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -66,10 +66,11 @@ h1 {
   gap: 2rem;
 
   &__label {
-    background-color: #406D65;
+    background-color: #FFDAC2;
     border-radius: 10px;
+    border: 3px solid #406D65;
     padding: 10px 40px;
-    color: #FFDAC2;
+    color: black;
   }
 
   &__mot {
@@ -182,6 +183,10 @@ h1 {
 
 input[type=radio] {
   display: none;
+}
+input[type=radio]:checked+label {
+  background-color: #406D65;
+  color: white;
 }
 
 h3 {
