--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,9 @@ img {
   padding-top: 3rem;
   gap: 16px;
 }
+.menu__reglement {
+  display: none;
+}
 
 p {
   margin: 0;
@@ -246,6 +249,29 @@ h3 {
 .gris {
   background-color: #E5D4C8 !important;
   color: black !important;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Contenu de la modale */
+.modal-content {
+  background-color: #FFDAC3;
+  margin: 15% auto;
+  padding: 20px;
+  border: 3px solid #9D4B1E;
+  border-radius: 10px;
+  width: 80%;
+  max-width: 600px;
 }
 
 /*# sourceMappingURL=styles.css.map */
