--- a/css/styles.css
+++ b/css/styles.css
@@ -194,9 +194,15 @@ input[type=radio] {
   display: none;
 }
 
+input[type=radio]:hover + label {
+  background-color: #406D65;
+  color: white;
+}
+
 input[type=radio]:checked + label {
   background-color: #406D65;
   color: white;
+  border: 3px solid white;
 }
 
 h3 {
@@ -263,10 +269,32 @@ h3 {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.modalDifficulte {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 /* Contenu de la modale */
 .modal-content {
   background-color: #FFDAC3;
   margin: 15% auto;
+  padding: 20px;
+  border: 3px solid #9D4B1E;
+  border-radius: 10px;
+  width: 80%;
+  max-width: 600px;
+}
+
+.modal-content-dif {
+  background-color: #FFDAC3;
+  margin: 31% auto;
   padding: 20px;
   border: 3px solid #9D4B1E;
   border-radius: 10px;
