ajout texte dans modale

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 .menu__interface {
   display: flex;
@@ -57,7 +57,7 @@ h1 {
   text-align: center;
 }
 
-.sous-titre {
+h2 {
   font-size: 2.5rem;
   color: #B24509;
   text-align: center;
@@ -209,6 +209,17 @@ h3 {
   margin-bottom: 0;
 }
 
+.h3Diff {
+  text-align: center;
+  margin-top: 2rem;
+  color: #B24509;
+}
+
+.h3Mod {
+  text-align: center;
+  color: #B24509;
+}
+
 .jeu__essais {
   width: 610px;
   display: flex;
@@ -246,10 +257,12 @@ h3 {
 
 .vert {
   background-color: #466E45 !important;
+  color: white;
 }
 
 .jaune {
   background-color: #E07E28 !important;
+  color: white;
 }
 
 .gris {
@@ -265,7 +278,7 @@ h3 {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -277,7 +290,7 @@ h3 {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -289,17 +302,37 @@ h3 {
   border: 3px solid #9D4B1E;
   border-radius: 10px;
   width: 80%;
-  max-width: 600px;
 }
 
-.modal-content-dif {
-  background-color: #FFDAC3;
-  margin: 31% auto;
-  padding: 20px;
-  border: 3px solid #9D4B1E;
+.regle {
+  display: flex;
+  padding: 0;
+  gap: 1rem;
+  justify-content: center;
+  text-decoration: none;
+  list-style: none;
+}
+.regle__numero {
+  border: 3px solid #B24509;
+  background-color: #B24509;
+  color: white;
+  border-radius: 0 0 50% 0;
+  aspect-ratio: 1/1;
+  display: flex;
+  width: 20px;
+  justify-content: center;
+}
+.regle__contenu {
+  width: 500px;
   border-radius: 10px;
-  width: 80%;
-  max-width: 600px;
+  border: 3px solid #B24509;
+}
+.regle__texte {
+  padding: 10px;
+}
+
+i {
+  font-size: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
