--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@ body {
   display: none;
   flex-direction: column;
   margin: auto;
-  border-radius: 50% 50% 0 0;
-  aspect-ratio: 1/1;
+  /*border-radius: 50% 50% 0 0;*/
+  /*aspect-ratio: 1/1;*/
 }
 
 img {
@@ -26,8 +26,8 @@ img {
   display: flex;
   flex-direction: column;
   margin: auto;
-  border-radius: 50% 50% 0 0;
-  aspect-ratio: 1/1;
+  /*border-radius: 50% 50% 0 0;*/
+  /*aspect-ratio: 1/1;*/
 }
 .menu__difficulte {
   display: flex;
@@ -68,7 +68,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3rem auto;
+  margin: 1rem auto;
   width: 640px;
   max-width: 51.2rem;
   gap: 2rem;
@@ -149,7 +149,7 @@ h2 {
 #menuRegle {
   width: 453px;
   height: 57px;
-  margin: 0 auto;
+  margin: -1rem auto;
   background-color: transparent;
   color: #9D4B1E;
   border: 3px solid #9D4B1E;
@@ -165,7 +165,7 @@ h2 {
 #menuCommencer {
   width: 453px;
   height: 57px;
-  margin: 0 auto;
+  margin: 1rem auto;
   background-color: #9D4B1E;
   color: #FFEBDC;
   border: 3px solid #9D4B1E;
@@ -227,7 +227,7 @@ h3 {
   flex-direction: column;
 }
 .jeu__liste {
-  margin-top: 0;
+  margin-bottom: 0;
   padding: 0;
 }
 .jeu__mot {
@@ -243,14 +243,14 @@ h3 {
 
 .mot span {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   border-radius: 10px;
   text-align: center;
-  line-height: 80px;
+  line-height: 50px;
   color: white;
   background-color: rgba(77, 60, 49, 0.3);
-  font-size: 28px;
+  font-size: 24px;
   margin: 0.2rem;
   text-transform: uppercase;
 }
