--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@ body {
   display: none;
   flex-direction: column;
   margin: auto;
-  /*border-radius: 50% 50% 0 0;*/
-  /*aspect-ratio: 1/1;*/
+  border-radius: 50% 50% 0 0;
+  aspect-ratio: 1/1;
 }
 
 img {
@@ -26,8 +26,8 @@ img {
   display: flex;
   flex-direction: column;
   margin: auto;
-  /*border-radius: 50% 50% 0 0;*/
-  /*aspect-ratio: 1/1;*/
+  border-radius: 50% 50% 0 0;
+  aspect-ratio: 1/1;
 }
 .menu__difficulte {
   display: flex;
@@ -68,7 +68,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem auto;
+  margin: 3rem auto;
   width: 640px;
   max-width: 51.2rem;
   gap: 2rem;
@@ -149,7 +149,7 @@ h2 {
 #menuRegle {
   width: 453px;
   height: 57px;
-  margin: -1rem auto;
+  margin: 0 auto;
   background-color: transparent;
   color: #9D4B1E;
   border: 3px solid #9D4B1E;
@@ -165,7 +165,7 @@ h2 {
 #menuCommencer {
   width: 453px;
   height: 57px;
-  margin: 1rem auto;
+  margin: 0 auto;
   background-color: #9D4B1E;
   color: #FFEBDC;
   border: 3px solid #9D4B1E;
@@ -222,12 +222,13 @@ h3 {
 
 .jeu__essais {
   width: 695px;
+  padding-top: 5rem;
   display: flex;
   margin: auto;
   flex-direction: column;
 }
 .jeu__liste {
-  margin-bottom: 0;
+  margin-top: 0;
   padding: 0;
 }
 .jeu__mot {
@@ -282,6 +283,41 @@ h3 {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.modal-reussis {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-reussis__content {
+  background-color: #FFEBDC;
+  margin: 15% auto;
+  padding: 20px;
+  border: 3px solid #9D4B1E;
+  border-radius: 10px;
+  width: 30%;
+}
+.modal-reussis__stats {
+  background-color: #FFDAC2;
+  margin: 15% auto;
+  padding: 10px;
+  border-radius: 10px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h4 {
+  margin: 0;
+  text-align: center;
+}
+
 .modalDifficulte {
   display: none;
   position: fixed;
@@ -294,7 +330,6 @@ h3 {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Contenu de la modale */
 .modal-content {
   background-color: #FFDAC3;
   margin: 15% auto;
