--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,17 @@ body {
 
 .motsDeTete {
   background-color: #FFDAC3;
-  width: 90rem;
-  max-width: 900px;
+  width: 95%;
+  max-width: 95%;
   display: none;
   flex-direction: column;
   margin: auto;
-  border-radius: 50% 50% 0 0;
-  aspect-ratio: 1/1;
+  padding: 0.5rem;
+}
+@media (min-width: 501px) {
+  .motsDeTete {
+    max-width: 90rem;
+  }
 }
 
 img {
@@ -21,19 +25,35 @@ img {
 
 .menu {
   background-color: #FFDAC3;
-  width: 90rem;
-  max-width: 900px;
+  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   margin: auto;
-  border-radius: 50% 50% 0 0;
-  aspect-ratio: 1/1;
+}
+@media (min-width: 501px) {
+  .menu {
+    background-color: #FFDAC3;
+    max-width: 90rem;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
 }
 .menu__difficulte {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-content: center;
   padding-top: 1rem;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+@media (min-width: 501px) {
+  .menu__difficulte {
+    flex-direction: row;
+    justify-content: center;
+    gap: 0.4rem;
+  }
 }
 .menu__interface {
   display: flex;
@@ -50,11 +70,16 @@ p {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: bold;
   color: #B24509;
   margin: 0;
   text-align: center;
+}
+@media (min-width: 711px) {
+  h1 {
+    font-size: 6rem;
+  }
 }
 
 h2 {
@@ -64,50 +89,88 @@ h2 {
   margin: 0;
 }
 
+.labelMot {
+  display: none;
+}
+
 .interface {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3rem auto;
-  width: 640px;
-  max-width: 51.2rem;
-  gap: 2rem;
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+  gap: 1rem;
+}
+@media (min-width: 711px) {
+  .interface {
+    margin: 3rem auto;
+    width: 640px;
+    max-width: 51.2rem;
+  }
 }
 .interface__label {
   background-color: #FFDAC2;
   border-radius: 10px;
   border: 3px solid #406D65;
-  padding: 10px 40px;
+  padding: 10px;
   color: black;
+  text-align: center;
+  width: 90%;
+}
+@media (min-width: 501px) {
+  .interface__label {
+    padding: 10px 40px;
+    width: 100px;
+  }
 }
 .interface__mot {
   display: flex;
   flex-direction: row;
-  width: 640px;
+  width: 95%;
   border-radius: 10px;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10px;
   background-color: rgba(136, 59, 17, 0.2);
+  gap: 0.9rem;
+  flex-wrap: wrap;
+}
+@media (min-width: 711px) {
+  .interface__mot {
+    width: 640px;
+    border-radius: 10px;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
 }
 .interface__options {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 640px;
+  width: 340px;
 }
-.interface__essaisRestant {
-  width: 610px;
-  display: flex;
-  margin: auto;
+@media (min-width: 711px) {
+  .interface__options {
+    width: 640px;
+  }
 }
 
 #btnEvaluer {
-  width: 130px;
-  height: 57px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 325px;
+  height: 72px;
   border-radius: 10px;
   background-color: #9D4B1E;
   color: #FFEBDC;
   font-size: 18px;
+}
+@media (min-width: 501px) {
+  #btnEvaluer {
+    height: 57px;
+  }
 }
 
 #btnEvaluer:hover {
@@ -116,19 +179,21 @@ h2 {
 }
 
 #btnReset {
-  width: 57px;
-  min-width: 57px;
-  height: 57px;
+  width: 72px;
+  min-width: 72px;
+  height: 72px;
   background-color: #FFDAC2;
   color: #883B11;
   border-radius: 10px;
   padding: 0;
   margin: 0;
 }
-
-#btnReset:hover {
-  background-color: #6D0000;
-  color: white;
+@media (min-width: 501px) {
+  #btnReset {
+    width: 57px;
+    min-width: 57px;
+    height: 57px;
+  }
 }
 
 #btnRegle, #btnDifficulte {
@@ -146,8 +211,25 @@ h2 {
   color: white;
 }
 
+#btnDiffEchec, #btnDiffReussis {
+  width: 100%;
+  height: 57px;
+  border-radius: 10px;
+  background-color: #B24509;
+  color: white;
+  margin-top: 2rem;
+}
+
+#btnDiffEchec:hover {
+  background-color: #6D0000;
+}
+
+#btnDiffReussis:hover {
+  background-color: #6D0000;
+}
+
 #menuRegle {
-  width: 453px;
+  width: 90%;
   height: 57px;
   margin: 0 auto;
   background-color: transparent;
@@ -156,21 +238,31 @@ h2 {
   padding: 10px 30px;
   border-radius: 10px;
 }
+@media (min-width: 501px) {
+  #menuRegle {
+    width: 453px;
+  }
+}
 
-#menuRegle:hover {
+#menuRegle:hover, #btnDifficulte:hover, #btnRegle:hover, #btnReset:hover {
   background-color: #9D4B1E;
   color: #FFDAC3;
 }
 
 #menuCommencer {
-  width: 453px;
+  width: 90%;
   height: 57px;
-  margin: 0 auto;
+  margin: 0 auto 2rem auto;
   background-color: #9D4B1E;
   color: #FFEBDC;
   border: 3px solid #9D4B1E;
   padding: 10px 30px;
   border-radius: 10px;
+}
+@media (min-width: 501px) {
+  #menuCommencer {
+    width: 453px;
+  }
 }
 
 #menuCommencer:hover {
@@ -183,11 +275,17 @@ h2 {
 }
 
 #mot {
-  width: 350px;
-  height: 35px;
+  width: 215px;
+  height: 50px;
   border-radius: 10px;
   border: 1px solid black;
   padding: 10px;
+}
+@media (min-width: 501px) {
+  #mot {
+    width: 350px;
+    height: 35px;
+  }
 }
 
 input[type=radio] {
@@ -221,11 +319,11 @@ h3 {
 }
 
 .jeu__essais {
-  width: 695px;
-  padding-top: 5rem;
+  padding-top: 2rem;
   display: flex;
   margin: auto;
   flex-direction: column;
+  align-items: center;
 }
 .jeu__liste {
   margin-top: 0;
@@ -238,22 +336,29 @@ h3 {
 #mot1, #mot2, #mot3, #mot4, #mot5, #mot6 {
   display: flex;
   flex-wrap: wrap;
-  width: 695px;
   justify-content: center;
 }
 
 .mot span {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 36px;
+  height: 36px;
   border-radius: 10px;
   text-align: center;
-  line-height: 50px;
+  line-height: 36px;
   color: white;
   background-color: rgba(77, 60, 49, 0.3);
-  font-size: 24px;
+  font-size: 20px;
   margin: 0.2rem;
   text-transform: uppercase;
+}
+@media (min-width: 501px) {
+  .mot span {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+  }
 }
 
 .vert {
@@ -283,6 +388,31 @@ h3 {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.modal-echec {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-echec__content {
+  background-color: #FFEBDC;
+  margin: 10% auto;
+  padding: 20px;
+  border: 3px solid #9D4B1E;
+  border-radius: 10px;
+  width: 50%;
+}
+@media (min-width: 501px) {
+  .modal-echec__content {
+    width: 40%;
+  }
+}
+
 .modal-reussis {
   display: none;
   position: fixed;
@@ -296,11 +426,16 @@ h3 {
 }
 .modal-reussis__content {
   background-color: #FFEBDC;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 20px;
   border: 3px solid #9D4B1E;
   border-radius: 10px;
-  width: 30%;
+  width: 50%;
+}
+@media (min-width: 501px) {
+  .modal-reussis__content {
+    width: 40%;
+  }
 }
 .modal-reussis__stats {
   background-color: #FFDAC2;
@@ -332,20 +467,30 @@ h4 {
 
 .modal-content {
   background-color: #FFDAC3;
-  margin: 15% auto;
+  margin: 2% auto;
   padding: 20px;
   border: 3px solid #9D4B1E;
   border-radius: 10px;
-  width: 80%;
+  box-sizing: border-box;
+  width: 85vw;
+  height: fit-content;
 }
 
 .regle {
   display: flex;
+  flex-direction: column;
   padding: 0;
   gap: 1rem;
   justify-content: center;
   text-decoration: none;
   list-style: none;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .regle {
+    flex-direction: row;
+    align-items: normal;
+  }
 }
 .regle__numero {
   border: 3px solid #B24509;
@@ -358,7 +503,7 @@ h4 {
   justify-content: center;
 }
 .regle__contenu {
-  width: 500px;
+  width: 100%;
   border-radius: 10px;
   border: 3px solid #B24509;
 }
@@ -366,8 +511,30 @@ h4 {
   padding: 10px;
 }
 
-i {
+.reset {
   font-size: 30px;
+}
+
+.fleche {
+  font-size: 24px;
+}
+
+#choixEchec, #choixReussis {
+  text-align: center;
+  display: block;
+  color: red;
+  font-size: 20px;
+}
+
+#erreur {
+  margin: 0;
+  font-size: 24px;
+  color: red;
+}
+@media (min-width: 509px) {
+  #erreur {
+    font-size: 28px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
